--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -1,6 +1,52 @@
 % This file was created with JabRef 2.3.1.
 % Encoding: UTF8
 
+
+
+@inproceedings{Maximilien2003,
+author = {Maximilien, E Michael and Williams, Laurie},
+title = {{Assessing Test-Driven Development at IBM}},
+year = {2013}
+booktitle = {Proceedings of the 25th International Conference on Software Engineering, 2003},
+}
+
+@article{Maximilien2003,
+
+volume = {6}
+}
+
+@article{Donoho2010,
+author = {Donoho, David L},
+journal = {Biostatistics (Oxford, England)},
+month = jul,
+number = {3},
+pages = {385--8},
+pmid = {20538873},
+title = {{An invitation to reproducible computational research.}},
+volume = {11},
+year = {2010}
+}
+
+@article{Numano2006,
+title = "In vivo isotropic 3D diffusion tensor mapping of the rat brain using diffusion-weighted 3D MP-RAGE \{MRI\} ",
+journal = "Magnetic Resonance Imaging ",
+volume = "24",
+number = "3",
+pages = "287 - 293",
+year = "2006",
+author = "Tomokazu Numano and Kazuhiro Homma and Nobuaki Iwasaki and Koji Hyodo and Naotaka Nitta and Takeshi Hirose",
+}
+
+@article{Caruyer2013,
+author = {Caruyer, Emmanuel and Lenglet, Christophe and Sapiro, Guillermo and Deriche, Rachid},
+journal = {Magnetic resonance in medicine : official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine},
+number = {6},
+pages = {1534--40},
+title = {{Design of multishell sampling schemes with uniform coverage in diffusion MRI.}},
+volume = {69},
+year = {2013}
+}
+
 @article{jeurissen2011probabilistic,
   title={Probabilistic fiber tracking using the residual bootstrap with constrained spherical deconvolution},
   author={Jeurissen, Ben and Leemans, Alexander and Jones, Derek K and Tournier, Jacques-Donald and Sijbers, Jan},
