Typographic tweaks to bibliography

--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -137,7 +137,7 @@ keywords = "Parallel imaging"
   title	 = {Denoising and fast diffusion imaging with physically constrained sparse dictionary learning}, 
   journal = {Medical Image Analysis},
   year = {2013},
-  pages	= {in press}
+  number = {in press}
 }
 
 
@@ -234,10 +234,10 @@ year = {2002}
 
 @article{Ben-Shachar2007,
 abstract = {Skilled reading requires mapping of visual text to sound and meaning. Because reading relies on neural systems spread across the brain, a full understanding of this cognitive ability involves the identification of pathways that communicate information between these processing regions. In the past few years, diffusion tensor imaging has been used to identify correlations between white matter properties and reading skills in adults and children. White matter differences have been found in left temporo-parietal areas and in posterior callosal tracts. We review these findings and relate them to possible pathways that are important for various aspects of reading. We describe how the results from diffusion tensor imaging can be integrated with functional results in good and poor readers.},
-author = {Ben-Shachar, Michal and Dougherty, Robert F and Wandell, Brian a},
+author = {Ben-Shachar, Michal and Dougherty, Robert F and Wandell, Brian A},
 doi = {10.1016/j.conb.2007.03.006},
 issn = {0959-4388},
-journal = {Current opinion in neurobiology},
+journal = {Current Opinion in Neurobiology},
 keywords = {Brain,Brain Mapping,Brain: anatomy \& histology,Brain: physiology,Diffusion Magnetic Resonance Imaging,Humans,Models, Neurological,Nerve Net,Nerve Net: physiology,Neural Pathways,Neural Pathways: physiology,Reading},
 month = apr,
 number = {2},
@@ -270,7 +270,7 @@ year = {2011}
   address = {San Francisco, USA},
   author = {Garyfallidis, Eleftherios and St-Jean, Samuel and Paquette, Michael and Coupé, Pierrick and Descoteaux, Maxime},
   booktitle = {ISBI HARDI reconstruction challenge 2013},
-  title = {Constrained spherical deconvolution on signal and ODF values},
+  title = {Constrained spherical deconvolution on signal and {ODF} values},
   year = {2013}
   }
 
@@ -310,7 +310,7 @@ journal = {NeuroImage},
 month = jul,
 number = {},
 pages = {in press},
-title = {{White Matter Integrity, Fiber Count, and Other Fallacies: The Do's and Don'ts of Diffusion MRI}},
+title = {White Matter Integrity, Fiber Count, and Other Fallacies: The Do's and Don'ts of Diffusion {MRI}},
 url = {http://dx.doi.org/10.1016/j.neuroimage.2012.06.081},
 volume = {},
 year = {2012}
@@ -359,7 +359,7 @@ number = {175},
 pages = {1--13},
 pmid = {23248578},
 publisher = {Frontiers},
-title = {{QuickBundles, a Method for Tractography Simplification.}},
+title = {{QuickBundles}, a Method for Tractography Simplification},
 url = {http://www.frontiersin.org/Journal/10.3389/fnins.2012.00175/abstract},
 volume = {6},
 year = {2012}
@@ -680,7 +680,7 @@ author = {Cook, P and Bai, Y and Nedjati-Gilani, S and Seunarine, K and Hall, M 
 booktitle = {International Society for Magnetic Resonance in Medicine},
 pages = {2759},
 volume = {14},
-title = {Camino: Open-source diffusion-mri reconstruction and processing},
+title = {Camino: Open-source diffusion-{MRI} reconstruction and processing},
 year = {2006}
 }
 
@@ -721,7 +721,7 @@ mendeley-tags = {tracking},
 month = mar,
 number = {1},
 pages = {53--66},
-title = {{MRtrix: Diffusion tractography in crossing fiber regions}},
+title = {{MRtrix}: Diffusion tractography in crossing fiber regions},
 url = {http://doi.wiley.com/10.1002/ima.22005},
 volume = {22},
 year = {2012}
@@ -3287,7 +3287,7 @@ year = {2009}
 
 @ARTICLE{callaghan-eccles-etal:1988,
   author = {P.T. Callaghan and C.D. Eccles and Y. Xia},
-  title = {Rapid communication: NMR microscopy of dynamic displacements: k-space
+  title = {Rapid communication: {NMR} microscopy of dynamic displacements: k-space
 	and q-space imaging},
   journal = {Journal of Physics E Scientific Instruments},
   year = {1988},
@@ -8638,7 +8638,7 @@ year = {2009},
 
 @ARTICLE{merboldt-hanicke-etal:85,
   author = {K.D. Merboldt and W. Hanicke and J. Frahm},
-  title = {Self-diffusion NMR Imaging Using Stimulated Echoes},
+  title = {Self-diffusion {NMR} Imaging Using Stimulated Echoes},
   journal = {Journal Magnetic Resonance},
   year = {1985},
   volume = {64},
@@ -10951,7 +10951,7 @@ year = {2011}
 @ARTICLE{tournier-calamante-etal:04,
   author = {J.-D. Tournier and F. Calamante and D.G. Gadian and A. Connelly},
   title = {Direct estimation of the fiber orientation density function from
-	diffusion-weighted MRI data using spherical deconvolution},
+	diffusion-weighted {MRI} data using spherical deconvolution},
   journal = {NeuroImage},
   year = {2004},
   volume = {23},
@@ -11001,7 +11001,7 @@ year = {2011}
 
 @INPROCEEDINGS{toussaint-souplet-etal:07,
   author = {N. Toussaint and J.C. Souplet and P. Fillard},
-  title = {MedINRIA: Medical Image Navigation and Research Tool by INRIA},
+  title = {{MedINRIA}: Medical Image Navigation and Research Tool by {INRIA}},
   booktitle = {MICCAI'07 Workshop on Interaction in medical image analysis and visualization},
   year = {2007},
   address = {Brisbane, Australia},
@@ -12283,7 +12283,7 @@ year={2010}, pages={1--14}}
 }
 
 @article{chung-lu-etal:06,
-title = "Comparison of bootstrap approaches for estimation of uncertainties of DTI parameters",
+title = "Comparison of bootstrap approaches for estimation of uncertainties of {DTI} parameters",
 journal = "NeuroImage",
 volume = "33",
 number = "2",
@@ -12313,7 +12313,7 @@ keywords = "Fiber tracking"
 }
 
 @inproceedings{pieper:06,
-  title={The NA-MIC Kit: ITK, VTK, pipelines, grids and 3D slicer as an open platform for the medical image computing community},
+  title={The {NA-MIC Kit}: {ITK}, {VTK}, pipelines, grids and {3D} slicer as an open platform for the medical image computing community},
   author={Pieper, Steve and Lorensen, Bill and Schroeder, Will and Kikinis, Ron},
   booktitle={Biomedical Imaging: Nano to Macro, 2006. 3rd IEEE International Symposium on},
   pages={698--701},
@@ -12322,7 +12322,7 @@ keywords = "Fiber tracking"
 }
 
 @article{cox-afni:12,
-  title={AFNI: What a long strange trip it's been},
+  title={{AFNI}: What a long strange trip it's been},
   author={Cox, Robert W},
   journal={Neuroimage},
   volume={62},
@@ -12333,7 +12333,7 @@ keywords = "Fiber tracking"
 }
 
 @article{fritzsche-mitk:12,
-  title={MITK Diffusion Imaging.},
+  title={{MITK} Diffusion Imaging.},
   author={Fritzsche, KH and Neher, PF and Reicht, I and van Bruggen, T and Goch, C and Reisert, M and Nolden, M and Zelzer, S and Meinzer, HP and Stieltjes, B},
   journal={Methods of information in medicine},
   volume={51},
@@ -12365,7 +12365,7 @@ keywords = "Fiber tracking"
 }
 
 @inproceedings{leemans-exploredti:09,
-  title={ExploreDTI: a graphical toolbox for processing, analyzing, and visualizing diffusion MR data},
+  title={{ExploreDTI}: a graphical toolbox for processing, analyzing, and visualizing diffusion {MR} data},
   author={Leemans, A and Jeurissen, B and Sijbers, J and Jones, DK},
   booktitle={Proceedings of the International Society for Magnetic
 Resonance in Medicine},
@@ -12386,7 +12386,7 @@ Resonance in Medicine},
 }
 
 @article{smith-fdt:04,
-  title={Advances in functional and structural MR image analysis and implementation as FSL.},
+  title={Advances in functional and structural {MR} image analysis and implementation as {FSL}.},
   author={Smith, Stephen M and Jenkinson, Mark and Woolrich, Mark W and Beckmann, Christian F and Behrens, TE and Johansen-Berg, Heidi and Bannister, Peter R and De Luca, Marilena and Drobnjak, Ivana and Flitney, David E and others},
   journal={Neuroimage},
   volume={23},
@@ -12407,7 +12407,7 @@ Resonance in Medicine},
 
 @article{clayden-TractoR:11,
   author =  "Jonathan D. Clayden and Susana Muñoz Maniega and Amos J. Storkey and Martin D. King and Mark E. Bastin and Chris A. Clark",
-  title = "TractoR: Magnetic Resonance Imaging and Tractography with R",
+  title = "Tracto{R}: magnetic resonance imaging and tractography with {R}",
   journal = "Journal of Statistical Software",
   volume =  "44",
   number =  "8",
@@ -12440,8 +12440,8 @@ year = {2013}
 }
 
 @article{van_numpy:11,
-  title={The NumPy array: a structure for efficient numerical computation},
-  author={Van Der Walt, Stefan and Colbert, S. Chris and Varoquaux, Gael},
+  title={The {NumPy} array: a structure for efficient numerical computation},
+  author={{van der Walt}, Stefan and Colbert, S. Chris and Varoquaux, Gael},
   journal={Computing in Science \& Engineering},
   volume={13},
   number={2},
@@ -12473,7 +12473,7 @@ year = {2013}
 }
 
 @inproceedings{westin:97,
-  title={Geometrical diffusion measures for MRI from tensor basis analysis},
+  title={Geometrical diffusion measures for {MRI} from tensor basis analysis},
   author={Westin, Carl-Fredrik and Peled, Sariel and Gudbjartsson, Hakon and Kikinis, Ron and Jolesz, Ferenc A},
   booktitle={Proceedings of ISMRM},
   volume={97},
@@ -12618,7 +12618,7 @@ publisher = {Oxford University Press}
 
 
 @Book{schroeder:01,
-  title={The Visualization Toolkit-User’s Guide},
+  title={The Visualization Toolkit-User's Guide},
   author={Schroeder, William J and Avila, Lisa S and Martin, Kenneth M and Hoffman, WILLIAM A and Law, C Charles},
   publisher={Kitware, Inc},
   year={2001}
@@ -12681,7 +12681,7 @@ author = {Chang, Lin-Ching and Walker, Lindsay and Pierpaoli, Carlo},
 doi = {10.1002/mrm.24173},
 file = {:Users/arokem/Documents/MendeleyDesktop/InformedRestore\_Chang\_2012.pdf:pdf},
 issn = {1522-2594},
-journal = {Magnetic resonance in medicine : official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine},
+journal = {Magnetic Resonance in Medicine},
 keywords = {artifact,diffusion tensor,diffusion tensor magnetic resonance,dt-mri,fractional anisotropy,imaging,increasingly used in clinical,is,outlier,restore,robust estimation,settings for its ability,to,trace},
 month = nov,
 number = {5},
